--- a/assignment2.html
+++ b/assignment2.html
@@ -4,10 +4,10 @@
 <head>
 <meta charset="utf-8">
 
-<title>subscribe</title>
+<title>registration</title>
 </head>
 
-<body>
+<body > 
     <thead align="center">
         <h1 align="center">Registration Form</h1>
     </thead>
@@ -83,7 +83,7 @@
     </tr>
 
 </table>
-    </tbody>  
+    </tbody>
 </body>
 
 </html>
