--- a/reciepes.html
+++ b/reciepes.html
@@ -8,7 +8,25 @@
 </head>
 
 <body>
- <h1 style="color:#5d5581  ;"> Bienvenue hreciepes</h1>  
-</body>
+    <thead align="center">
+        <h1 align="center">les plan de food</h1>
+    </thead>
+    <tbody>
+        <table align="center">
+<tr> 
+    <td><label for="f1">p1</label></td>
+   <td><a href="f1.html" id="f1"><img src="f1.jpg" alt="food"></a></td>
+</tr>
 
+<tr> 
+    <td><label for="f2">p1</label></td>
+   <td><a href="f2.html" id="f2"><img src="f2.jpg" alt="food"></a></td>
+</tr>
+<tr> 
+    <td><label for="f3">p1</label></td>
+   <td><a href="f3.html" id="f3"><img src="f3.jpg" alt="food"></a></td>
+</tr>
+</table>
+    </tbody>  
+</body>
 </html>
