--- a/about.html
+++ b/about.html
@@ -7,16 +7,37 @@
 <title>about</title>
 </head>
 
-<body>
+<body >
+ <thead >
+    <table align="center" bgcolor="#000000"><tr> <th><img src="Diamond.jpg" alt="the diamond logo"  width="100" height="50"> </th>
 
-    <h1 style="color:#5d5581 ;"> Bienvenue about</h1> 
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-        Sit repellendus maiores exercitationem perspiciatis, hic laborum aliquam, 
-        quas recusandae perferendis quasi ut distinctio officiis. Suscipit quia 
-        repellat et praesentium, deleniti sapiente.
-    </p>
+      <th><i><H1 style="color:#ffffff ;" >the diamond restaurant</H1></i></th>
+    </tr></table>
+ 
+<img src="imagederestaurant.jpg" alt="the diamond restaurant"  height="750">
 
-<img src="food.jpg" alt="food">
+
+
+ </thead>
+ <tbody>
+<table>
+<tr>
+    <td><img src="food.jpg" alt="food" width="200" height="100"></td>
+    <td><h1>Notre cuisine</h1>
+        <p>Mon amour et ma folie pour la cuisine.<br>
+            Ce n'est pas une question de mathématiques ou de chimie, 
+            c'est un art qui requiert de l'instinct et du gout que de mesures exectes, 
+        avec des bons ingrédients!</p></td>
+</tr>
+
+
+</table>
+</tbody>
+<tfoot>
+    termes et conditions copyright © 1999-2003 mentions légales accueil crédits nous contacter <a href="subscribe.html"> vers nous</a>
+
+</tfoot>
 </body>
+
 
 </html>
