--- a/h1.html
+++ b/h1.html
@@ -4,26 +4,26 @@
 <head>
 <meta charset="utf-8">
 
-<title>hreciepes</title>
+<title>recipe fider</title>
 </head>
 
-<body>
-    cumque suscipit quasi deleniti?
-    <ul>
-        <li>oignon
-         tomate
-         tomate
-         moutarde
-         moutarde
-         ketchup
-         ketchup
-         pain pour hamburger
-         pain pour hamburger
-         viande hachée
-         viande hachée
-         cheddar
-         cheddar (achat sous vide en grande surface)
-         </li> 
-         salade</ul>
+<body bgcolor="#ffffE8">  
+    <img src="f1.jpeg" alt="food"  width="250" height="250"><br>
+    Ingrédients couscous-tunisien de 8 personnes?
+ 
+    <ul >
+        <li>500 g de semoule moyenne</li>
+        <li>2 c. à s. de concentré de tomates</li>
+        <li>4 pommes de terre</li>
+        <li>3 piments verts</li>
+        <li>Poudre de piment rouge</li>
+        <li>Sel ou sel fin</li>
+        <li>Gigot de mouton ou Gigot de veau</li>
+<li>1 oignon</li>
+<li>3 carottes</li>
+<li>3 verres d'huile d'olive</li>
+<li>Mélange d'épices tunisien</li>
+<li>Poivre</li>
+    </ul>
 </body>
 </html>
