--- a/reciepes.html
+++ b/reciepes.html
@@ -7,26 +7,24 @@
 <title>hreciepes</title>
 </head>
 
-<body>
+<body><form>
     <thead align="center">
         <h1 align="center">les plan de food</h1>
     </thead>
     <tbody>
         <table align="center">
 <tr> 
-    <td><label for="f1">p1</label></td>
-   <td><a href="f1.html" id="f1"><img src="f1.jpg" alt="food"></a></td>
-</tr>
+    <td><label for="f1"><b>couscous</b></label></td>
+   <td><a href="h1.html" id="f1"><img src="f1.jpeg" alt="food" width="300" height="350"></a></td>
 
-<tr> 
-    <td><label for="f2">p1</label></td>
-   <td><a href="f2.html" id="f2"><img src="f2.jpg" alt="food"></a></td>
-</tr>
-<tr> 
-    <td><label for="f3">p1</label></td>
-   <td><a href="f3.html" id="f3"><img src="f3.jpg" alt="food"></a></td>
+    <td><label for="f2"><b>Kefteji</b></label></td>
+   <td><a href="h2.html" id="f2"><img src="f2.jpg" alt="food" width="300" height="350"></a></td>
+
+    <td><label for="f3"><b>kamounia</b></label></td>
+   <td><a href="h3.html" id="f3"><img src="f3.jpg" alt="food" width="300" height="350"></a></td>
 </tr>
 </table>
     </tbody>  
+</form>
 </body>
 </html>
